{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 11,
  "lineage": "52cf718b-2e73-9f7a-4efa-f2956f902931",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-24T12:22:30.319-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/smiling-office-365211/global/firewalls/smiling-office-365211-fw-allow-http",
            "log_config": [],
            "name": "smiling-office-365211-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/smiling-office-365211/global/networks/smiling-office-365211-vpc",
            "priority": 1000,
            "project": "smiling-office-365211",
            "self_link": "https://www.googleapis.com/compute/v1/projects/smiling-office-365211/global/firewalls/smiling-office-365211-fw-allow-http",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "http"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-24T12:22:30.358-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/smiling-office-365211/global/firewalls/smiling-office-365211-fw-allow-https",
            "log_config": [],
            "name": "smiling-office-365211-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/smiling-office-365211/global/networks/smiling-office-365211-vpc",
            "priority": 1000,
            "project": "smiling-office-365211",
            "self_link": "https://www.googleapis.com/compute/v1/projects/smiling-office-365211/global/firewalls/smiling-office-365211-fw-allow-https",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "https"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-24T12:22:29.928-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/smiling-office-365211/global/firewalls/smiling-office-365211-fw-allow-rdp",
            "log_config": [],
            "name": "smiling-office-365211-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/smiling-office-365211/global/networks/smiling-office-365211-vpc",
            "priority": 1000,
            "project": "smiling-office-365211",
            "self_link": "https://www.googleapis.com/compute/v1/projects/smiling-office-365211/global/firewalls/smiling-office-365211-fw-allow-rdp",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "rdp"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-24T12:22:30.340-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/smiling-office-365211/global/firewalls/smiling-office-365211-fw-allow-ssh",
            "log_config": [],
            "name": "smiling-office-365211-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/smiling-office-365211/global/networks/smiling-office-365211-vpc",
            "priority": 1000,
            "project": "smiling-office-365211",
            "self_link": "https://www.googleapis.com/compute/v1/projects/smiling-office-365211/global/firewalls/smiling-office-365211-fw-allow-ssh",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "ssh"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20221201",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/smiling-office-365211/zones/europe-west1-b/disks/smiling-office-365211-vm-852f73c6"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "smiling-office-365211vm-852f73c6.testing",
            "id": "projects/smiling-office-365211/zones/europe-west1-b/instances/smiling-office-365211-vm-852f73c6",
            "instance_id": "3960216379890261980",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "XWeXyMP7mfo=",
            "metadata_startup_script": "    sudo apt-get update | \n    sudo apt-get install -yq build-essential apache2\n",
            "name": "smiling-office-365211-vm-852f73c6",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.187.179.165",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/smiling-office-365211/global/networks/smiling-office-365211-vpc",
                "network_ip": "10.10.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/smiling-office-365211/regions/europe-west1/subnetworks/smiling-office-365211-public-subnet-1",
                "subnetwork_project": "smiling-office-365211"
              }
            ],
            "project": "smiling-office-365211",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/smiling-office-365211/zones/europe-west1-b/instances/smiling-office-365211-vm-852f73c6",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/smiling-office-365211/global/networks/smiling-office-365211-vpc",
            "mtu": 0,
            "name": "smiling-office-365211-vpc",
            "project": "smiling-office-365211",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/smiling-office-365211/global/networks/smiling-office-365211-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-24T12:22:32.969-08:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/smiling-office-365211/regions/europe-west1/subnetworks/smiling-office-365211-public-subnet-1",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "smiling-office-365211-public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/smiling-office-365211/global/networks/smiling-office-365211-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "smiling-office-365211",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/smiling-office-365211/regions/europe-west1/subnetworks/smiling-office-365211-public-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}